Fixed input not showing text

--- a/app/assets/stylesheets/default.scss
+++ b/app/assets/stylesheets/default.scss
@@ -22,3 +22,7 @@ body {
   background-repeat: no-repeat;
 }
 
+
+input {
+  color: #000;
+}
